attached_assets/Pasted--Serving-Flask-app-main-Debug-mode-off-WARNING-This-is-a-development-server-Do-not-use-it-i-1747256083048.txt
* Serving Flask app 'main'
 * Debug mode: off
WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:5000
 * Running on http://172.31.128.4:5000
Press CTRL+C to quit
172.31.128.4 - - [14/May/2025 20:53:46] "GET / HTTP/1.1" 200 -
[2025-05-14 20:53:57,623] ERROR in app: Exception on /login [POST]
Traceback (most recent call last):
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/flask/app.py", line 1511, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/flask/app.py", line 919, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/flask/app.py", line 917, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/flask/app.py", line 902, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/main.py", line 79, in login
    c.execute("SELECT password_hash FROM admin_users WHERE id = ?", (admin_id,))
psycopg2.errors.SyntaxError: syntax error at end of input
LINE 1: SELECT password_hash FROM admin_users WHERE id = ?
                                                          ^

172.31.128.4 - - [14/May/2025 20:53:57] "POST /login HTTP/1.1" 500 -
[2025-05-14 20:53:58,531] ERROR in app: Exception on /login [POST]
Traceback (most recent call last):
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/flask/app.py", line 1511, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/flask/app.py", line 919, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/flask/app.py", line 917, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/flask/app.py", line 902, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/main.py", line 79, in login
    c.execute("SELECT password_hash FROM admin_users WHERE id = ?", (admin_id,))
psycopg2.errors.SyntaxError: syntax error at end of input
LINE 1: SELECT password_hash FROM admin_users WHERE id = ?
                                                          ^

172.31.128.4 - - [14/May/2025 20:53:58] "POST /login HTTP/1.1" 500 -